fixes gap in grid

--- a/src/index.css
+++ b/src/index.css
@@ -55,18 +55,18 @@ main {
 }
 
 .boardWrapper {
-  height: 100%;
-  width: 100%;
   overflow: scroll;
   max-height: 100vh;
+  display: flex;
+  flex-grow: 1;
 }
 
 .board {
   box-sizing: border-box;
-  height: 100%;
+  max-height: 100%;
   flex-grow: 1;
   display: grid;
-
+  height: fit-content;
 }
 
 
